--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,149 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header h1 {
+	font-size: 100px;
+	margin-bottom: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-page {
+	max-width: 600px;
+	margin: 0 auto;
+	width: 100%;
+}
+
+.action-btn {
+	background: #7d95b0;
+	border-radius: 10px;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	font-size: 20px;
+	margin: 10px;
+	padding: 10px;
+	width: 200px;
+}
+
+.action-btn:hover {
+	background: #3f6fa9;
+	font-weight: bold;
+}
+
+.counter-label {
+	font-size: 40px;
+	margin-bottom: 10px;
+	text-align: center;
+}
+
+.counter-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+}
+
+.form-container {
+	margin: 0px auto;
+	max-width: 600px;
+	padding: 25px;
+	width: 100%;
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top: 20px;
+}
+
+input {
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 10px;
+	max-width: 300px;
+	width: 100%;
+	margin: 10px 0;
+}
+
+button {
+	background: #7d95b0;
+	border-radius: 10px;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	font-size: 16px;
+	margin: 10px;
+	padding: 12px 20px;
+	width: 200px;
+	max-width: 300px;
+}
+
+
+.car {
+background-color: #a9713f;
+color: #7d95b0;
+text-align: center;
+max-width: 150px;
+padding: 10px;
+border-radius: 10px;
+margin: 10px;
+}
+
+.navigate {
+background-color: #3fa95d;
+margin: 10px;
+max-width: 150px;
+border-radius: 10px;
+padding: 10px;
+color: #fff;
+text-decoration: none;
+}
+
+.navigation{
+	margin:20px 0;
+}
+
+.news {
+  max-width:600px;
+  margin: 0 auto;
+	padding: 50px 20px ;
+	width: 100%;
+}
+
+.news-item {
+ background-color: #b2c4da;
+ border: 1px solid rgb(204, 204, 204);
+ text-align: center;
+ padding: 15px;
+ margin: 10px;
+ border-radius: 10px;
+ max-width: 200px;
+}
+
+.home-page {
+	margin: 100px 20px;
+}  
+
+.user-name {
+	font-size: 25px;
+	margin: 10px 0;
+}
+
+.user-bio {
+line-height: 1.5;
+font-size: 20px;
+}
+
+.auth-title {
+	font-size: 30px;
+	margin: 20px auto;
+}
+
+.auth-container {
+	max-width: 600px;
+	margin: 0 auto;
+	width: 100%;
+}
+
+.auth-btn{
+	display: block;
 }
